Some CSRF security changes; support for "must change password".

--- a/src/views/force_change_password.jade
+++ b/src/views/force_change_password.jade
@@ -38,11 +38,9 @@ block content
     
     p #{i18n.description}
 
-    form(role='form' action='#{baseUrl}/#{verifyPostUrl}' method='post' onsubmit='return validatePassword();')
+    form(role='form' action='#{baseUrl}/#{changePasswordUrl}' method='post' onsubmit='return validatePassword();')
 
         input(type='hidden' name='_csrf' value='#{csrfToken}')
-        input(type='hidden' name='verification_id' value='#{id}')
-        input(type='hidden' name='type' value='lostpassword')
 
         .form-group
             label(for='password') #{i18n.password}:
@@ -59,3 +57,6 @@ block content
             br
 
         button(class='btn btn-lg btn-primary btn-block' type='submit') #{i18n.change_password}
+
+    h5
+        a(href='#{baseUrl}/#{logoutUrl}') #{i18n.logout}
